--- a/WhiteLagoon.Web/Views/Villa/Index.cshtml
+++ b/WhiteLagoon.Web/Views/Villa/Index.cshtml
@@ -25,6 +25,7 @@
 				<th>Price</th>
 				<th>Sqft</th>
 				<th>Occupancy</th>
+				<th></th>
 			</tr>
 		</thead>
 	<tbody>
@@ -35,6 +36,16 @@
 						<td>@obj.Price</td>
 						<td>@obj.Sqft</td>
 						<td>@obj.Occupancy</td>
+						<td>
+							<div class="w-75 btn-group" role="group">
+								<a asp-action="Update" asp-route-villaId="@obj.Id" class="btn btn-success mx-2">
+									<i class="bi bi-pencil-square"></i> Update
+								</a>
+								<a asp-action="Delete" asp-route-villaId="@obj.Id" class="btn btn-danger mx-2">
+									<i class="bi bi-trash-fill"></i> Delete
+								</a>
+							</div>
+						</td>
 					</tr>
 		}
 	</tbody>
