--- a/WhiteLagoon.Web/Views/Villa/Create.cshtml
+++ b/WhiteLagoon.Web/Views/Villa/Create.cshtml
@@ -9,7 +9,7 @@
 		</div>
 	</div>
 	<div class="card-body border p-4">
-		<form method="post" class="row">
+		<form method="post" class="row" enctype="multipart/form-data">
 			<div class="p-3">
 				<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 				<div class="form-floating py-1 col-12">
@@ -38,8 +38,9 @@
 					<span asp-validation-for="Occupancy" class="text-danger"></span>
 				</div>
 				<div class="form-floating py-1 col-12">
-					<input asp-for="ImageUrl" class="form-control border-bottom shadow" />
-					<label asp-for="ImageUrl" class="ms-2"></label>
+					<input asp-for="ImageUrl" hidden class="form-control border-bottom shadow" />
+					<input asp-for="Image" class="form-control border-bottom shadow" />
+					<label asp-for="Image" class="ms-2"></label>
 					<span asp-validation-for="ImageUrl" class="text-danger"></span>
 				</div>
 
